# productGuide

./: .gitignore  00记录文件.md  01需求文档.md  02概要设计.md  03详细设计.md  README.md  config.local.env.example  pyproject.toml  requirements.txt
src/data/: README.md  items.json
src/product_guide/: __init__.py  __main__.py  ark_client.py  cli.py  config.py  ingest.py  json_log.py  kb.py  prompt.py
